; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/vmware/vmci/extr_vmci_qpair.c_vmci_qpair_detach.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/vmware/vmci/extr_vmci_qpair.c_vmci_qpair_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vmci_qpair = type { i32, i32, i32 }

@VMCI_ERROR_INVALID_ARGS = common dso_local global i32 0, align 4
@VMCI_QPFLAG_LOCAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vmci_qpair_detach(%struct.vmci_qpair** %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.vmci_qpair**, align 8
  %4 = alloca %struct.vmci_qpair*, align 8
  %5 = alloca i32, align 4
  store %struct.vmci_qpair** %0, %struct.vmci_qpair*** %3, align 8
  %6 = load %struct.vmci_qpair**, %struct.vmci_qpair*** %3, align 8
  %7 = icmp ne %struct.vmci_qpair** %6, null
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load %struct.vmci_qpair**, %struct.vmci_qpair*** %3, align 8
  %10 = load %struct.vmci_qpair*, %struct.vmci_qpair** %9, align 8
  %11 = icmp ne %struct.vmci_qpair* %10, null
  br i1 %11, label %14, label %12

12:                                               ; preds = %8, %1
  %13 = load i32, i32* @VMCI_ERROR_INVALID_ARGS, align 4
  store i32 %13, i32* %2, align 4
  br label %36

14:                                               ; preds = %8
  %15 = load %struct.vmci_qpair**, %struct.vmci_qpair*** %3, align 8
  %16 = load %struct.vmci_qpair*, %struct.vmci_qpair** %15, align 8
  store %struct.vmci_qpair* %16, %struct.vmci_qpair** %4, align 8
  %17 = load %struct.vmci_qpair*, %struct.vmci_qpair** %4, align 8
  %18 = getelementptr inbounds %struct.vmci_qpair, %struct.vmci_qpair* %17, i32 0, i32 2
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @vmci_queue_pair_detach(i32 %19)
  store i32 %20, i32* %5, align 4
  %21 = load %struct.vmci_qpair*, %struct.vmci_qpair** %4, align 8
  %22 = getelementptr inbounds %struct.vmci_qpair, %struct.vmci_qpair* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load i32, i32* @VMCI_QPFLAG_LOCAL, align 4
  %25 = and i32 %23, %24
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %31

27:                                               ; preds = %14
  %28 = load %struct.vmci_qpair*, %struct.vmci_qpair** %4, align 8
  %29 = getelementptr inbounds %struct.vmci_qpair, %struct.vmci_qpair* %28, i32 0, i32 1
  %30 = call i32 @vmci_destroy_event(i32* %29)
  br label %31

31:                                               ; preds = %27, %14
  %32 = load %struct.vmci_qpair*, %struct.vmci_qpair** %4, align 8
  %33 = call i32 @vmci_free_kernel_mem(%struct.vmci_qpair* %32, i32 12)
  %34 = load %struct.vmci_qpair**, %struct.vmci_qpair*** %3, align 8
  store %struct.vmci_qpair* null, %struct.vmci_qpair** %34, align 8
  %35 = load i32, i32* %5, align 4
  store i32 %35, i32* %2, align 4
  br label %36

36:                                               ; preds = %31, %12
  %37 = load i32, i32* %2, align 4
  ret i32 %37
}

declare dso_local i32 @vmci_queue_pair_detach(i32) #1

declare dso_local i32 @vmci_destroy_event(i32*) #1

declare dso_local i32 @vmci_free_kernel_mem(%struct.vmci_qpair*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
